Add link to reflection document

--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
             <p>For the prospective creatives, wouldn&#39;t it be nice to be able to afford to do this for a reasonable living? For the viewers, wouldn&#39;t it be nice to be trusted to handle more interesting and diverse content?</p>
             <p>That's why I believe Disney should provide better pay and better creative assurances for their creative employees and better market their non-blockbuster media. It makes little sense why the company is spending the money to produce these movies and shows, and then failing to market them, and compromising them in ways both fans and artists get frustrated and turned away with.</p>
             <p>This is all ultimately up to the Disney board, shareholders, and executives to realise, but I believe at some point they will. When you turn away enough of your potential creatives and enough of your audience, the ship will have to turn around, or sink. Please don't let the latter happen, Disney.</p>
+
+            <hr/>
+
+            <p>You can view the associated reflection document <a href="https://cdn.boonchuy.com/school/ENGL101/final%20reflection%20SAE.docx">here</a>.</p>
         </div>
     </body>
 </html>
